--- a/assets/translations/en-US.json
+++ b/assets/translations/en-US.json
@@ -1,3 +1,16 @@
 {
+  "json":"en",
+  "lang":"英文",
+  "lang_en":"English",
+  "lang_tw":"繁體中文",
+  "lang_kr":"한국어",
+  "lang_cn":"简体中文",
+  "lang_jp":"日本語",
 
+  "login":"login",
+  "register":"register",
+  "registerHint":"register",
+  "haveAccount":"Have Account?",
+  "phone":"phone",
+  "email":"email"
 }
