0506update_完成長按選單與刪除聊天室

--- a/assets/translations/en-US.json
+++ b/assets/translations/en-US.json
@@ -12,5 +12,7 @@
   "registerHint":"register",
   "haveAccount":"Have Account?",
   "phone":"phone",
-  "email":"email"
+  "email":"email",
+  "deleteAlert": "Deletion\nConfirmation",
+  "deleteAlertInfo": "Deleted chats can’t be recovered. Are you sure you want to continue? "
 }
