--- a/assets/translations/en-US.json
+++ b/assets/translations/en-US.json
@@ -161,10 +161,10 @@
   "registerFinishTitle":"Registration is complete",
   "seeMore":"More",
   "otherRegisterWay":"Other registration methods",
-  "message":"Send a message",
+  "message":"Message",
   "aboutMe":"About me",
   "allPost":"All posts",
-  "posts":"Aost",
+  "posts":"Post",
   "fans":"Fan",
   "success":"Success",
   "hide":"Hide"
